# TaskTimer

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release_checklist.md
.github/workflows/: dependency-advisory-watch.yml  performance-large-dataset.yml  (+4 more)
docs/: architecture.md  configuration.md  data-backup-export.md  database-schema.sql  domain-model.md  implementation-plan.md  mvp-spec.md  next-actions.md  operations.md  performance-large-dataset.md  public-operations.md  public-readiness.md  release-checklist.md  security.md  testing.md  ui-ux-redesign.md
scripts/: audit-runtime-privacy.mjs  capture-readme-screenshots.mjs  check-glib-advisory.mjs  check-macos-signing-preflight.mjs  check-release-platform-policy.mjs  check-release-target.mjs  measure-large-ui.mjs  verify-macos-release-artifacts.mjs  verify-macos-release-artifacts.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: clock.rs  commands.rs  dto.rs  mod.rs  notification.rs  repositories.rs  usecases.rs
src-tauri/src/domain/: mod.rs  notification.rs  pomodoro.rs  recurrence.rs  task.rs  timer.rs
src-tauri/src/infrastructure/: clock.rs  mod.rs  notification.rs  sqlite.rs
(+137 files in other folders)
